Completed training, hyperparameter search, test verification

--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@ main:
   # All the intermediate files will be copied to this directory at the end of the run.
   # Set this to null if you are running in prod
   project_name: nyc_airbnb
+  entity: ttho751
   experiment_name: development
   steps: all
 etl:
